...

    private var header: some View {
        HStack {
            Text("Appointments")
                .font(.largeTitle)
                .bold()
                .accessibilityIdentifier("appointmentsTitle")
            Spacer()
            Button(action: {
                showNewFeatureAlert = true
            }) {
                HStack {
                    Image("Icon")
...
